# analyseur-crypto

./: .env.example  .gitignore  .runtime_control.json  .runtime_models.json  DISCLAIMER.fr.md  DISCLAIMER.md  README.fr.md  README.md  alembic.ini  pyproject.toml  recommendations.txt  start.bat  start_telegram.bat  stop.bat
alembic/: env.py
data/: bitget_symbols_futures.json  bitget_symbols_spot.json
docker/: compose.yml
docs/: RESEARCH_NOTES.fr.md  RESEARCH_NOTES.md
scripts/: analyze_trades.py  backtest_2weeks.py  backtest_ab_adaptive.py  backtest_engine.py  backtest_live_parity.py  bootstrap_db.py  build_ml_dataset.py  cleanup_counter_regime.py  debug_scan.py  detector_vs_random.py  diagnose_regression.py  eval_composite.py  fetch_bitget_symbols.py  init_db.py  inspect_db.py  ml_replay.py  ml_train.py  momentum_test.py  run_loop.py  sweep_reversal_test.py  test_suite.py  trend_test.py  tune_adaptive_weights.py
tests/: conftest.py  test_adaptive.py  test_backtest_engine.py  test_bos_choch.py  test_chart_renderer.py  test_dashboard_workspace.py  test_data_math_backtest_integrity.py  test_engine_parity.py  test_fvg.py  test_hypothesis_lifecycle.py  test_ml_pipeline.py  test_ohlcv_data_store.py  test_ohlcv_fetcher_mocked.py  test_optimization_batch.py  test_optimizer.py  test_order_blocks.py  test_paper_execution.py  test_paper_live_simulation.py  test_paper_live_telegram_events.py  test_patterns_channels_wedges.py  test_patterns_flags.py  test_patterns_rectangles.py  test_patterns_reversal.py  test_patterns_triangles.py  test_period_utils.py  test_pipeline.py  (+8 more)
(+129 files in other folders)
